--- a/Machine-Learning-Books/Hands-On-Machine-Learning/Part-II-Neural-Networks-AI/Introduction-AI.ipynb
+++ b/Machine-Learning-Books/Hands-On-Machine-Learning/Part-II-Neural-Networks-AI/Introduction-AI.ipynb
@@ -13,7 +13,119 @@
    "source": [
     "## The Multilayer Perceptron and Backpropagation\n",
     "\n",
-    "#### An MLP is composed of one input layer, one or more layers of TLUs called hidden layers, and one final layer of TLUs called the output layer (see Figure 10-7). The layers close to the input layer are usually called the lower layers, and the ones close to the outputs are usually called the upper layers."
+    "#### An MLP is composed of one input layer, one or more layers of TLUs called hidden layers, and one final layer of TLUs called the output layer (see Figure 10-7). The layers close to the input layer are usually called the lower layers, and the ones close to the outputs are usually called the upper layers.\n",
+    "\n",
+    "## Let’s run through how backpropagation works again in a bit more detail:\n",
+    "\n",
+    "- It handles one mini-batch at a time (for example, containing 32 instances each), and it goes through the full training set multiple times. Each pass is called an epoch.\n",
+    "\n",
+    "- Each mini-batch enters the network through the input layer. The algorithm then computes the output of all the neurons in the first hidden layer, for every instance in the mini-batch. The result is passed on to the next layer, its output is computed and passed to the next layer, and so on until we get the output of the last layer, the output layer. This is the forward pass: it is exactly like making predictions, except all intermediate results are preserved since they are needed for the backward pass.\n",
+    "\n",
+    "- Next, the algorithm measures the network’s output error (i.e., it uses a loss function that compares the desired output and the actual output of the network, and returns some measure of the error).\n",
+    "\n",
+    "- Then it computes how much each output bias and each connection to the output layer contributed to the error. This is done analytically by applying the chain rule (perhaps the most fundamental rule in calculus), which makes this step fast and precise.\n",
+    "\n",
+    "- The algorithm then measures how much of these error contributions came from each connection in the layer below, again using the chain rule, working backward until it reaches the input layer. As explained earlier, this reverse pass efficiently measures the error gradient across all the connection weights and biases in the network by propagating the error gradient backward through the network (hence the name of the algorithm).\n",
+    "\n",
+    "- Finally, the algorithm performs a gradient descent step to tweak all the connection weights in the network, using the error gradients it just computed.\n",
+    "\n",
+    "\n",
+    "#### It is important to initialize all the hidden layers’ connection weights randomly, or else training will fail. For example, if you initialize all weights and biases to zero, then all neurons in a given layer will be perfectly identical, and thus backpropagation will affect them in exactly the same way, so they will remain identical. In other words, despite having hundreds of neurons per layer, your model will act as if it had only one neuron per layer: it won’t be too smart. If instead you randomly initialize the weights, you break the symmetry and allow backpropagation to train a diverse team of neurons.\n",
+    "\n",
+    "#### In short, backpropagation makes predictions for a mini-batch (forward pass), measures the error, then goes through each layer in reverse to measure the error contribution from each parameter (reverse pass), and finally tweaks the connection weights and biases to reduce the error (gradient descent step)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.datasets import fetch_california_housing\n",
+    "from sklearn.metrics import mean_squared_error\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.neural_network import MLPRegressor\n",
+    "from sklearn.pipeline import make_pipeline\n",
+    "from sklearn.preprocessing import StandardScaler\n",
+    "\n",
+    "housing = fetch_california_housing()\n",
+    "X_train_full, X_test, y_train_full, y_test = train_test_split(\n",
+    "    housing.data, housing.target, random_state=42)\n",
+    "X_train, X_valid, y_train, y_valid = train_test_split(\n",
+    "    X_train_full, y_train_full, random_state=42)\n",
+    "\n",
+    "mlp_reg = MLPRegressor(hidden_layer_sizes=[50, 50, 50], random_state=42)\n",
+    "pipeline = make_pipeline(StandardScaler(), mlp_reg)\n",
+    "pipeline.fit(X_train, y_train)\n",
+    "y_pred = pipeline.predict(X_valid)\n",
+    "rmse = mean_squared_error(y_valid, y_pred, squared=False)  # about 0.505"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Downloading data from https://storage.googleapis.com/tensorflow/tf-keras-datasets/train-labels-idx1-ubyte.gz\n",
+      "29515/29515 [==============================] - 0s 1us/step\n",
+      "Downloading data from https://storage.googleapis.com/tensorflow/tf-keras-datasets/train-images-idx3-ubyte.gz\n",
+      "26421880/26421880 [==============================] - 1s 0us/step\n",
+      "Downloading data from https://storage.googleapis.com/tensorflow/tf-keras-datasets/t10k-labels-idx1-ubyte.gz\n",
+      "5148/5148 [==============================] - 0s 0us/step\n",
+      "Downloading data from https://storage.googleapis.com/tensorflow/tf-keras-datasets/t10k-images-idx3-ubyte.gz\n",
+      "4422102/4422102 [==============================] - 0s 0us/step\n"
+     ]
+    }
+   ],
+   "source": [
+    "import tensorflow as tf\n",
+    "\n",
+    "fashion_mnist = tf.keras.datasets.fashion_mnist.load_data()\n",
+    "(X_train_full, y_train_full), (X_test, y_test) = fashion_mnist\n",
+    "X_train, y_train = X_train_full[:-5000], y_train_full[:-5000]\n",
+    "X_valid, y_valid = X_train_full[-5000:], y_train_full[-5000:]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_train, X_valid, X_test = X_train / 255., X_valid / 255., X_test / 255."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tf.random.set_seed(42)\n",
+    "model = tf.keras.Sequential()\n",
+    "model.add(tf.keras.layers.Input(shape=[28, 28]))\n",
+    "model.add(tf.keras.layers.Flatten())\n",
+    "model.add(tf.keras.layers.Dense(300, activation=\"relu\"))\n",
+    "model.add(tf.keras.layers.Dense(100, activation=\"relu\"))\n",
+    "model.add(tf.keras.layers.Dense(10, activation=\"softmax\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model = tf.keras.Sequential([\n",
+    "    tf.keras.layers.Flatten(input_shape=[28, 28]),\n",
+    "    tf.keras.layers.Dense(300, activation=\"relu\"),\n",
+    "    tf.keras.layers.Dense(100, activation=\"relu\"),\n",
+    "    tf.keras.layers.Dense(10, activation=\"softmax\")\n",
+    "])"
    ]
   }
  ],
@@ -24,7 +136,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.9.19"
   }
  },
