--- a/Machine-Learning-Books/Hands-On-Machine-Learning/Part-II-Neural-Networks-AI/Introduction-AI.ipynb
+++ b/Machine-Learning-Books/Hands-On-Machine-Learning/Part-II-Neural-Networks-AI/Introduction-AI.ipynb
@@ -127,6 +127,99 @@
     "    tf.keras.layers.Dense(10, activation=\"softmax\")\n",
     "])"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/30\n",
+      "  58/1719 [>.............................] - ETA: 1s - loss: 1.8579 - accuracy: 0.4273      "
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2024-09-15 09:49:51.695740: W tensorflow/tsl/platform/profile_utils/cpu_utils.cc:128] Failed to get CPU frequency: 0 Hz\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1719/1719 [==============================] - 2s 924us/step - loss: 0.7038 - accuracy: 0.7673 - val_loss: 0.5008 - val_accuracy: 0.8358\n",
+      "Epoch 2/30\n",
+      "1719/1719 [==============================] - 2s 879us/step - loss: 0.4876 - accuracy: 0.8305 - val_loss: 0.4543 - val_accuracy: 0.8404\n",
+      "Epoch 3/30\n",
+      "1719/1719 [==============================] - 2s 879us/step - loss: 0.4418 - accuracy: 0.8447 - val_loss: 0.4193 - val_accuracy: 0.8548\n",
+      "Epoch 4/30\n",
+      "1719/1719 [==============================] - 1s 865us/step - loss: 0.4174 - accuracy: 0.8535 - val_loss: 0.3937 - val_accuracy: 0.8638\n",
+      "Epoch 5/30\n",
+      "1719/1719 [==============================] - 1s 868us/step - loss: 0.3967 - accuracy: 0.8597 - val_loss: 0.3882 - val_accuracy: 0.8622\n",
+      "Epoch 6/30\n",
+      "1719/1719 [==============================] - 2s 890us/step - loss: 0.3804 - accuracy: 0.8662 - val_loss: 0.3932 - val_accuracy: 0.8620\n",
+      "Epoch 7/30\n",
+      "1719/1719 [==============================] - 1s 871us/step - loss: 0.3681 - accuracy: 0.8688 - val_loss: 0.3715 - val_accuracy: 0.8700\n",
+      "Epoch 8/30\n",
+      "1719/1719 [==============================] - 1s 872us/step - loss: 0.3565 - accuracy: 0.8742 - val_loss: 0.3697 - val_accuracy: 0.8642\n",
+      "Epoch 9/30\n",
+      "1719/1719 [==============================] - 2s 878us/step - loss: 0.3454 - accuracy: 0.8771 - val_loss: 0.3497 - val_accuracy: 0.8734\n",
+      "Epoch 10/30\n",
+      "1719/1719 [==============================] - 1s 868us/step - loss: 0.3356 - accuracy: 0.8804 - val_loss: 0.3534 - val_accuracy: 0.8736\n",
+      "Epoch 11/30\n",
+      "1719/1719 [==============================] - 1s 867us/step - loss: 0.3268 - accuracy: 0.8838 - val_loss: 0.3715 - val_accuracy: 0.8656\n",
+      "Epoch 12/30\n",
+      "1719/1719 [==============================] - 1s 866us/step - loss: 0.3187 - accuracy: 0.8856 - val_loss: 0.3504 - val_accuracy: 0.8674\n",
+      "Epoch 13/30\n",
+      "1719/1719 [==============================] - 1s 867us/step - loss: 0.3116 - accuracy: 0.8892 - val_loss: 0.3295 - val_accuracy: 0.8806\n",
+      "Epoch 14/30\n",
+      "1719/1719 [==============================] - 1s 854us/step - loss: 0.3038 - accuracy: 0.8909 - val_loss: 0.3405 - val_accuracy: 0.8770\n",
+      "Epoch 15/30\n",
+      "1719/1719 [==============================] - 1s 867us/step - loss: 0.2980 - accuracy: 0.8934 - val_loss: 0.3362 - val_accuracy: 0.8786\n",
+      "Epoch 16/30\n",
+      "1719/1719 [==============================] - 1s 869us/step - loss: 0.2908 - accuracy: 0.8956 - val_loss: 0.3291 - val_accuracy: 0.8774\n",
+      "Epoch 17/30\n",
+      "1719/1719 [==============================] - 2s 880us/step - loss: 0.2858 - accuracy: 0.8967 - val_loss: 0.3378 - val_accuracy: 0.8738\n",
+      "Epoch 18/30\n",
+      "1719/1719 [==============================] - 2s 882us/step - loss: 0.2795 - accuracy: 0.8996 - val_loss: 0.3246 - val_accuracy: 0.8778\n",
+      "Epoch 19/30\n",
+      "1719/1719 [==============================] - 1s 871us/step - loss: 0.2742 - accuracy: 0.9017 - val_loss: 0.3677 - val_accuracy: 0.8630\n",
+      "Epoch 20/30\n",
+      "1719/1719 [==============================] - 2s 884us/step - loss: 0.2693 - accuracy: 0.9031 - val_loss: 0.3212 - val_accuracy: 0.8804\n",
+      "Epoch 21/30\n",
+      "1719/1719 [==============================] - 2s 876us/step - loss: 0.2641 - accuracy: 0.9054 - val_loss: 0.3166 - val_accuracy: 0.8828\n",
+      "Epoch 22/30\n",
+      "1719/1719 [==============================] - 1s 867us/step - loss: 0.2589 - accuracy: 0.9058 - val_loss: 0.3133 - val_accuracy: 0.8820\n",
+      "Epoch 23/30\n",
+      "1719/1719 [==============================] - 2s 873us/step - loss: 0.2546 - accuracy: 0.9088 - val_loss: 0.3445 - val_accuracy: 0.8724\n",
+      "Epoch 24/30\n",
+      "1719/1719 [==============================] - 2s 888us/step - loss: 0.2490 - accuracy: 0.9107 - val_loss: 0.3172 - val_accuracy: 0.8858\n",
+      "Epoch 25/30\n",
+      "1719/1719 [==============================] - 2s 886us/step - loss: 0.2450 - accuracy: 0.9118 - val_loss: 0.3130 - val_accuracy: 0.8838\n",
+      "Epoch 26/30\n",
+      "1719/1719 [==============================] - 2s 889us/step - loss: 0.2413 - accuracy: 0.9134 - val_loss: 0.3133 - val_accuracy: 0.8842\n",
+      "Epoch 27/30\n",
+      "1719/1719 [==============================] - 2s 886us/step - loss: 0.2361 - accuracy: 0.9145 - val_loss: 0.3211 - val_accuracy: 0.8852\n",
+      "Epoch 28/30\n",
+      "1719/1719 [==============================] - 2s 890us/step - loss: 0.2334 - accuracy: 0.9163 - val_loss: 0.3096 - val_accuracy: 0.8872\n",
+      "Epoch 29/30\n",
+      "1719/1719 [==============================] - 1s 869us/step - loss: 0.2290 - accuracy: 0.9176 - val_loss: 0.3110 - val_accuracy: 0.8858\n",
+      "Epoch 30/30\n",
+      "1719/1719 [==============================] - 2s 879us/step - loss: 0.2253 - accuracy: 0.9190 - val_loss: 0.3051 - val_accuracy: 0.8876\n"
+     ]
+    }
+   ],
+   "source": [
+    "model.compile(loss=\"sparse_categorical_crossentropy\",\n",
+    "              optimizer=\"sgd\",\n",
+    "              metrics=[\"accuracy\"])\n",
+    "history = model.fit(X_train, y_train, epochs=30, validation_data=(X_valid, y_valid))"
+   ]
   }
  ],
  "metadata": {
